--- a/pagina inicio.html
+++ b/pagina inicio.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-<h1>Hola</h1>
-    <script src="pagina.js"></script>
-</body>
+<html>
+    <head>
+    <title>La Guia del Kchimbo</title>
+    <link rel="icon" href="../imagenes/Logoweb.webp">
+    <link rel="stylesheet" type="text/css" href="pagina.css">
+    <script src="pagina.js" defer></script>
+    <meta charset="utf-8">
+    <meta name="keywords" content="Registro">
+    </head>
+    <body>
+    <main>
+    <div>
+    <ol>
+    <a href="login.html" target="">Acceder</a> 
+    <a href="registro.html" target="">Crear Cuenta</a> 
+    </ol>
+    </div>
+    </main>
+    </body>
+    <footer>
+    
+    </footer>
 </html>
