--- a/Proyecto/pagina inicio.html
+++ b/Proyecto/pagina inicio.html
@@ -3,8 +3,8 @@
     <head>
     <title>La Guia del Kchimbo</title>
     <link rel="icon" href="../imagenes/Logoweb.webp">
-    <link rel="stylesheet" type="text/css" href="pagina.css">
-    <script src="pagina.js" defer></script>
+    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <script src="scripts.js" defer></script>
     <meta charset="utf-8">
     <meta name="keywords" content="Registro">
     </head>
@@ -19,5 +19,9 @@
     </main>
     </body>
     <footer>
+    
     </footer>
+    <script>
+        
+    </script>
 </html>
