--- a/Proyecto/pagina inicio.html
+++ b/Proyecto/pagina inicio.html
@@ -4,24 +4,33 @@
     <title>La Guia del Kchimbo</title>
     <link rel="icon" href="../imagenes/Logoweb.webp">
     <link rel="stylesheet" type="text/css" href="estilos.css">
-    <script src="scripts.js" defer></script>
     <meta charset="utf-8">
     <meta name="keywords" content="Registro">
     </head>
     <body>
-    <main>
-    <div>
-    <ol>
-    <a href="login.html" target="">Acceder</a> 
-    <a href="registro.html" target="">Crear Cuenta</a> 
-    </ol>
-    </div>
-    </main>
+        <main>
+            <div>
+                <ul>
+                    <li><a href="login.html" target="">Acceder</a> </li>
+                    <li><a href="registro.html" target="">Crear Cuenta</a></li>
+                </ul>
+            </div>
+            <div>
+                <ul>
+                    <li>Inicio</li>
+                    <li>Facultades</li>
+                    <li>deportes</li>
+                    <li>profesores</li>
+                    <li>seminarios</li>
+                    <li>eventos</li>
+                    <li>calendario</li>
+                    <li>conferencias</li>
+                </ul>
+            </div>
+        </main>
     </body>
     <footer>
     
     </footer>
-    <script>
-        
-    </script>
+    <script></script>
 </html>
